syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

// Messages outside the service block
message Attribute {
    string name = 1;
    repeated string values = 2;
}

message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    repeated Attribute attribute = 4;
}

message BillingRequest {
    string userId = 1;
    string name = 2;
    string email = 3;
    string productId = 4;
    Product product = 5;
}

message BillingResponse {
    string name = 1;
    string email = 2;
    string productId = 3;
    Product product = 4;
}

// Service block ONLY has rpc methods
service BillingService {
    rpc CreateBilling (BillingRequest) returns (BillingResponse);
}
