syntax = "proto3";

option java_multiple_files = true;
option java_package = "variant"; // Java package nên đặt theo chuẩn


enum Status {
  UNKNOWN = 0;
  SOLD_OUT = 1;
  IN_STOCK = 2;
  PRE_ORDER = 3;
  DISCONTINUED = 4;
}

message Attribute {
  string name = 1;
  repeated string values = 2;
}

message VariantResponse {
  string id = 1;
  repeated Attribute attributes = 2;
  Status status = 3;
  string sku = 4;
  string barcode = 5;
  double price = 6;
  string imgurl = 7;
  int32 quantity = 8;
}

message GetVariantsRequest {
  string productId = 1;
}
message VariantsRequest {
  string productId = 1;
  repeated Attribute attributes = 2;
  Status status = 3;
  string sku = 4;
  string barcode = 5;
  double price = 6;
  string imgurl = 7;
  int32 quantity = 8;
}

message CreateVariantsRequest {
  repeated VariantsRequest variants = 1;
}

message res{
  string value =1;
}
service VariantService {
  rpc GetVariants(GetVariantsRequest) returns (stream VariantResponse);
  rpc CreateVariants(CreateVariantsRequest) returns (res);
}
